[pycodestyle]
max-line-length = 120
exclude = .eggs

[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[behave]
color = True
summary = True

[options.extras_require]
  dev =
    behave==1.2.5
    coverage==4.4.1
    psutil>=5.2.2
    pycodestyle>=2.3.1
    setuptools>=70.2.0
    six
    sphinx==1.4.8
    sphinx-argparse==0.1.15
    sphinx_rtd_theme==0.2.4
    sphinxcontrib-napoleon==0.5.3
    wheel
  test =
    mock==2.0.0
